<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daniel_catlett.mccwirelessdc.MainActivity">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSelect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" >

        <RadioButton
            android:text="@string/radBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radBudget"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radStandard"
            android:layout_weight="1"
            android:checked="true" />

        <RadioButton
            android:text="@string/radUltra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radUltra"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/txtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/txtField"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/txtResults" />

    <ImageView
        app:srcCompat="@drawable/cat"
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/txtResults"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/txtCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCat"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <TextView
        android:text="@string/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCall"
        android:textSize="18sp"
        android:layout_below="@+id/txtSelect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/txtCallText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtField"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/txtHint"
        android:layout_below="@+id/txtData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:text="@string/txtSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSelect"
        android:textSize="18sp"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtData"
        android:textSize="18sp"
        android:text="@string/txtData"
        android:gravity="center_horizontal"
        android:layout_below="@+id/txtCall"
        android:layout_alignParentStart="true" />

</RelativeLayout>
